--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 
 <div class="card">
     <div class="search">
-        <input type="text" placeholder="enter city name" spellcheck="false">
+        <input type="text" placeholder="Enter City Name" spellcheck="false">
         <button><img src="images/search.png"></button>
+    </div>
+    <div class="error">
+        <p>Invalid city name.</p>
     </div>
     <div class="weather">
         <img src="images/rain.png" class="weather-icon">
@@ -36,6 +39,72 @@
         </div>
     </div>
 </div>
+
+<script>
+
+const apiKey = "84c96075b43a072c13b208bc165be27e";
+const apiURL = "https://api.openweathermap.org/data/2.5/weather?units=metric&q=";
+
+const searchBox = document.querySelector(".search input")
+const searchBtn = document.querySelector(".search button")
+const weatherIcon = document.querySelector(".weather-icon");
+
+async function checkWeather(city){
+    const response = await fetch(apiURL + city + `&appid=${apiKey}`);
+
+    if (response.status == 404){
+        document.querySelector(".error").style.display = "block";
+        document.querySelector(".weather").style.display = "none";
+
+    } else {
+        var data = await response.json();
+
+        document.querySelector(".city").innerHTML = data.name;
+        document.querySelector(".temp").innerHTML = Math.round(data.main.temp) + "°c";
+        document.querySelector(".humidity").innerHTML = data.main.humidity + "%";
+        document.querySelector(".wind").innerHTML = data.wind.speed + " km/h";
+
+        if (data.weather[0].main == "Clouds"){
+            weatherIcon.src = "images/clouds.png";
+        } else if 
+            (data.weather[0].main == "Clear"){
+            weatherIcon.src = "images/clear.png";
+        } else if 
+        (data.weather[0].main == "Drizzle"){
+            weatherIcon.src = "images/drizzle.png";
+        } else if
+        (data.weather[0].main == "Mist"){
+            weatherIcon.src = "images/Mist.png";
+        } else if
+        (data.weather[0].main == "Rain"){
+            weatherIcon.src = "images/rain.png";
+        } else if
+        (data.weather[0].main == "Snow"){
+            weatherIcon.src = "images/snow.png";
+        }
+
+        document.querySelector(".weather").style.display = "block";
+        document.querySelector(".error").style.display = "none";
+
+    }
+
+    
+}
+
+searchBtn.addEventListener("click", ()=>{
+    checkWeather(searchBox.value);
+});
+
+searchBox.addEventListener("keydown", (event) => {
+    if (event.code === "Enter"){
+        event.preventDefault();
+        checkWeather(searchBox.value);
+    }
+});
+
+
+</script>
+
     
 </body>
 </html>
